# AReaL

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build-docker-image.yml  tag-release-image.yml  test-areal.yml
areal/: README.md  version.py
areal/api/: alloc_mode.py  cli_args.py  controller_api.py  engine_api.py  io_struct.py  reward_api.py  workflow_api.py
areal/controller/: train_controller.py
areal/core/: async_task_runner.py  dist_rollout.py  remote_inf_engine.py  staleness_manager.py  workflow_executor.py
areal/dataset/: __init__.py  clevr_count_70k.py  deepscaler.py  deepscaler_simulation.py  geometry3k.py  gsm8k.py  hhrlhf.py  omni_simulation.py  polaris_simulation.py  torl_data.py  workbook_simulation.py
areal/engine/: base_hf_engine.py  fsdp_engine.py  megatron_engine.py  sglang_remote.py  vllm_remote.py
areal/engine/ppo/: actor.py  critic.py
areal/engine/rw/: rw_engine.py
areal/engine/sft/: lm_engine.py
areal/experimental/openai/: cache.py  client.py  proxy.py
areal/experimental/trainer/: rl.py
areal/experimental/workflow/: multi_turn_v2.py
areal/launcher/: ray.py
areal/models/transformers/: qwen3_vl.py  ulyssess_patch.py
areal/reward/: math_parser.py
areal/scheduler/rpc/: rpc_server.py  serialization.py
areal/tests/: test_allocation_mode.py  test_async_task_runner.py  test_dynamic_import.py  test_engine_api_workflow_resolution.py  test_examples.py  test_fsdp_engine_nccl.py  test_inference_engines.py  test_model_utils.py  test_packed_vs_padded_consistency.py  test_perf_trace_converter.py  test_perf_tracer.py  test_rpc_integration.py  test_serialization.py  test_train_engine.py
areal/tests/experimental/openai/: test_cache.py
areal/tests/grpo/: config.yaml  entrypoint.py
areal/tests/sft/: entrypoint.py
areal/tests/torchrun/: run_ulysses.py
areal/tools/: perf_trace_converter.py  plot_session_trace.py  validate_docker_installation.py  validate_installation.py  validation_base.py
areal/utils/: constants.py  data.py  distributed.py  dynamic_import.py  image.py  launcher.py  model.py  perf_tracer.py  recover.py  saver.py  stats_logger.py  stats_tracker.py
areal/utils/fsdp/: grad.py  parallel.py
areal/workflow/: multi_turn.py  rlvr.py  vision_rlvr.py
docs/: _config.yml  _toc.yml  cli_reference.md
docs/algorithms/: async.md
docs/best_practices/: algo_perf.md  debugging.md  perf_profiling.md
docs/customization/: agent.md  algorithm.md  dataset.md
docs/legacy/developer/trainer/: allocation_parallel.md
docs/lite/: gsm8k_grpo.md
docs/references/: reproduce.md
docs/tutorial/: agentic_rl.md  eval.md  installation.md  megatron.md  quickstart.md
evaluation/: README.md
examples/: config_converter.py
examples/alignment/: hhrlhf_rw.py  hhrlhf_rw.yaml
examples/camel/: config.yaml  train.py
examples/countdown/: countdown.py  reward_score.py  train.py  train_config.yaml
examples/docs/debug/: cmp_rollout.py
examples/experimental/dapo/: gsm8k_dapo.py  gsm8k_dapo.yaml
examples/experimental/dr.grpo/: gsm8k_drgrpo.yaml
examples/experimental/gspo/: gsm8k_gspo.yaml
examples/experimental/lite_ppo/: gsm8k_liteppo.py  gsm8k_liteppo.yaml
examples/experimental/proxy/: README.md  gsm8k_grpo_proxy.py  math_agent.py  math_with_python_tool.py  multi_agent_math.py
examples/lora/: gsm8k_grpo_lora.py  gsm8k_grpo_lora.yaml
examples/math/: boba_grpo.py  boba_grpo.yaml  boba_grpo_vllm.yaml  deprecated_gsm8k_grpo.yaml  gsm8k_grpo.py  gsm8k_grpo.yaml  gsm8k_grpo_megatron.py  gsm8k_grpo_megatron.yaml  gsm8k_grpo_trainer.py  gsm8k_m2po.yaml  gsm8k_ppo.py  gsm8k_ppo.yaml  gsm8k_reinforce.yaml  gsm8k_reinforce_baseline.yaml  gsm8k_rloo.yaml  gsm8k_sft.py  gsm8k_sft.yaml  gsm8k_sft_megatron.py  gsm8k_sft_megatron.yaml
examples/multi-turn-math/: README.md  config.yaml  train.py
examples/openai-agents/: config.yaml  multi_agent_math_workflow.py  train_agents.py
examples/search-agent/: local_1.5b_example.yaml
examples/search-agent/tongyi_deepresearch/: config.yaml  react_agent.py  tool_search.py  tool_visit.py  train.py
examples/skypilot/: README.md  gsm8k_grpo_ray.yaml  ray_cluster.sky.yaml  single_node.sky.yaml
examples/tir/: tir_math_config.yaml  tir_workflow.py  train_tir.py
examples/tir/tests/: test_tir.py
examples/tir/tools/: base.py  calculator_tool.py  python_tool.py
examples/tracer/: gsm8k_grpo.py  gsm8k_grpo.yaml
examples/vlm/: clevr_count_70k_grpo.py  clevr_count_70k_grpo.yaml  clevr_count_70k_sft.py  clevr_count_70k_sft.yaml
notebook/: math_reflection_en.ipynb  math_reflection_zh.ipynb  search_agent_zh.ipynb
realhf/impl/model/modules/: attn.py
recipe/AEnt/: actor.py  aent_args.py  gsm8k_aent_grpo.py
recipe/AEnt/configs/: gsm8k_aent_grpo.yaml
